[package]
name = "cmop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toposort-scc = "0"
clap = { version = "4",  features = ["derive"] }

# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1"
topological-sort = "0"
petgraph = "0"