[package]
name = "red4-conflicts"
version = "0.5.0"
edition = "2021"

[dependencies]
egui = "0.26"
eframe = { version = "0.26", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
simple-logging = "2.0"
open = "5.0"
egui_dnd = "0.7"

[patch.crates-io]

[dependencies.red4lib]
git = "https://github.com/rfuzzo/red4lib"
#path = "C:\\GitHub\\__rfuzzo\\red4lib"
