[package]
name = "red4-tweak-browser"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
walkdir = "2.5"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
egui = "0.29.0"
eframe = { version = "0.29.0", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
