[package]
name = "red4-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
simple_logger = "4.3"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
colored = "2"

[dependencies.red4lib]
git = "https://github.com/rfuzzo/red4lib"
